force-app/main/default/objects/Territory_Management_Setup__mdt/Territory_Management_Setup__mdt.object-meta.xml
<CustomObject>
    <label>Territory Managemet Controller</label>
    <pluralLabel>Territory Management Controllers</pluralLabel>
</CustomObject>