force-app/main/default/objects/Territory_Management_Setup__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>Naming Format for mdt records:
Condition ObjectToTerritoryAssociation/user2TerritoryAssociation FieldName</description>
    <label>Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>