force-app/main/default/objects/Territory_Management_Setup__mdt/listViews/All_1.listView-meta.xml
<ListView>
    <fullName>All_1</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Field_Type__c</columns>
    <columns>Field_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All_New</label>
</ListView>